--- a/views/pages/blog-grid.ejs
+++ b/views/pages/blog-grid.ejs
@@ -55,7 +55,7 @@
             </form>
             <div class="sign in-wrapper-footer">
               <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
-              <div class="divider"><span>or</span></div>
+              <div class="divider"><span><a href="/forget">Reset Password</a></span></div>
 
             </div>
           </div>
@@ -71,7 +71,7 @@
           <div class="sign in-wrapper">
             <div class="sign in-wrapper-header text-center">
               <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
-              <h3 class="title">Created Account</h3>
+              <h3 class="title">Create Account</h3>
               <p>please fill the form to create account</p>
             </div>
             <form action="/registration" method="post" class="sign in-form">
