--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -54,7 +54,7 @@
             </form>
             <div class="signin-wrapper-footer">
               <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
-              <div class="divider"><span>or</span></div>
+              <div class="divider"><span><a href="/forget">Reset Password</a></span></div>
 
             </div>
           </div>
@@ -96,8 +96,8 @@
               <button type="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
             <div class="signin-wrapper-footer">
-              <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
-              <div class="divider"><span>or</span></div>
+  <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
+              <div class="divider"><span><a href="/forget">Reset Password</a></span></div>
 
             </div>
           </div>
