--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -65,6 +65,7 @@
         <div class="signin-wrapper-footer">
           <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
           <div class="divider"><span>or</span></div>
+          <p class="bottom-text"><a href="/forget">Reset Password</a> </p>
 
         </div>
       </div>
@@ -221,7 +222,7 @@
               <div class="d-widget d-flex flex-wrap">
                 <div class="col-8">
                   <span class="caption">Total Deposit</span>
-                  <h4 class="currency-amount">$<%= totalDeposit %></h4>
+                  <h4 class="currency-amount">$<%= totalDeposit.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></h4>
                 </div>
                 <div class="col-4">
                   <div class="icon ml-auto">
@@ -234,7 +235,7 @@
               <div class="d-widget d-flex flex-wrap">
                 <div class="col-8">
                   <span class="caption">Total Withdraw</span>
-                  <h4 class="currency-amount">$<%= totalWithdraw %></h4>
+                  <h4 class="currency-amount">$<%= totalWithdraw.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></h4>
                 </div>
                 <div class="col-4">
                   <div class="icon ml-auto">
@@ -248,7 +249,7 @@
               <div class="d-widget d-flex flex-wrap">
                 <div class="col-8">
                   <span class="caption">Total Profit</span>
-                  <h4 class="currency-amount">$<%= totalProfit %></h4>
+                  <h4 class="currency-amount">$<%= totalProfit.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></h4>
                 </div>
                 <div class="col-4">
                   <div class="icon ml-auto">
@@ -261,7 +262,7 @@
               <div class="d-widget d-flex flex-wrap">
                 <div class="col-8">
                   <span class="caption">Referral Earnings</span>
-                  <h4 class="currency-amount">$<%= referalEarn %></h4>
+                  <h4 class="currency-amount">$<%= referalEarn.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></h4>
                 </div>
                 <div class="col-4">
                   <div class="icon ml-auto" style="color:black">
