--- a/views/pages/home-three.ejs
+++ b/views/pages/home-three.ejs
@@ -55,6 +55,7 @@
         <div class="sign in-wrapper-footer">
           <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
           <div class="divider"><span>or</span></div>
+          <p class="bottom-text"><a href="/forget">Reset Password</a> </p>
 
         </div>
       </div>
