--- a/views/pages/investment.ejs
+++ b/views/pages/investment.ejs
@@ -64,7 +64,7 @@
             </form>
             <div class="signin-wrapper-footer">
               <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
-              <div class="divider"><span>or</span></div>
+              <div class="divider"><span><a href="/forget">Reset Password</a></span></div>
               <ul class="social-list">
                 <li><a href="#0"><i class="fa fa-facebook-f"></i></a></li>
                 <li><a href="#0"><i class="fa fa-twitter"></i></a></li>
@@ -84,7 +84,7 @@
           <div class="signin-wrapper">
             <div class="signin-wrapper-header text-center">
               <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
-              <h3 class="title">Created Account</h3>
+              <h3 class="title">Create Account</h3>
               <p>please fill the form to create account</p>
             </div>
             <form action="/registration" method="post" class="signin-form">
@@ -110,8 +110,8 @@
               <button type="submit" value="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
             <div class="signin-wrapper-footer">
-              <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
-              <div class="divider"><span>or</span></div>
+  <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
+              <div class="divider"><span><a href="/forget">Reset Password</a></span></div>
               <ul class="social-list">
                 <li><a href="#0"><i class="fa fa-facebook-f"></i></a></li>
                 <li><a href="#0"><i class="fa fa-twitter"></i></a></li>
