--- a/views/pages/newpassword.ejs
+++ b/views/pages/newpassword.ejs
@@ -173,7 +173,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="inner-page-content-area">
-                    <h2 class="page-title">PASSWORD RESET</h2>
+                    <h2 class="page-title">Password reset</h2>
                     <nav aria-label="breadcrumb" class="page-header-breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/">Home</a></li>
@@ -193,19 +193,19 @@
         <div class="row justify-content-center">
           <div class="col-lg-7">
             <div class="section-header text-center">
-              <span class="section-subtitle">Forget Password</span>
+              <span class="section-subtitle">Enter New Password</span>
               <h2 class="section-title">Reset</h2>
              
             </div>
           </div>
           <div class="col-lg-12 contact-form-wrapper">
-            <form class="contact-form"  method="post" action="/forget">
+            <form class="contact-form"  method="post" action="/newpassword/<%= email %>">
               <div class="row">
                 <div class="col-lg-3">
                    
                   </div>
                 <div class="col-lg-6">
-                  <input type="email" name="email" id="email" placeholder="Email*" required>
+                  <input type="password" name="password" id="email" placeholder="Password*" required>
                 </div>
                 <div class="col-lg-3">
                    
